Added a cross version test to measure the configuration time for a large build that uses the legacy Java plugin.